# Stock

./: .flaskenv  .gitignore  Dockerfile  Event.py  Event_status.py  ISEN Inventory Stock.postman_collection.json  Isen Inventory.postman_collection.json  Item.py  Item_location.py  Location.py  Person.py  README.md  Reserved_item.py  Stock.wsgi  Users.py  app.py  main.py  models.py  pyproject.toml  requests.json  requirements.txt  routes.py  setup.py
DB Init/: docker-compose.yml
DB Init/init/: import.sql
instance/: config.py
src/: __init__.py  database.py  models.py  routes.py
stock/: __init__.py  config.py  db.py  models.py  routes.py
