[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "stock"
authors = [{name = "IMS Promo Dev Team", email = "imspromo@yncrea.fr"}]
readme = "README.md"
dynamic = ["version", "description"]
dependencies = [
    "flask",
    "flask_sqlalchemy",
    "flask_cors",
    "psycopg2-binary",
]
requires-python = ">=3.10"
