[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "src"
authors = [{name = "IMS Promo Dev Team", email = "imspromo@yncrea.fr"}]
readme = "README.md"
dynamic = ["version", "description"]
dependencies = [
    "flask",
    "flask-sqlalchemy",
    "flask-login",
    "flask-cors",
    "psycopg2",
    "sqlalchemy",
    "werkzeug",
    "waitress"
]
requires-python = ">=3.10"