[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "src"
authors = [{name = "IMS Promo Dev Team", email = "imspromo@yncrea.fr"}]
readme = "README.md"
dynamic = ["version", "description"]
dependencies = [
    "Flask",
    "Flask-SQLAlchemy",
    "Flask-Login",
    "Flask-Cors",
    #"Flask-SimpleLDAP",
    "SQLAlchemy",
    "psycopg2",
    "Werkzeug",
    "waitress"
]
requires-python = ">=3.10"